<resources>
    <string name="app_name">Bopit_MatAlv</string>
    <string name="bop_it_welcome">¡Bienvenido a Bop-it!</string>
    <string name="bop_it">Bop-it!</string>
    <string name="acerca_de">Acerca de</string>
    <string name="jugar_solitario">Jugar Solitario</string>
    <string name="preferencias">Preferencias</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="volver">Volver</string>
    <string name="tiempo_config">Tiempo para hacer Acción</string>
    <string name="default_3">3</string>
    <string name="default_1">1</string>
    <string name="acciones_seguidas_config">Acciones Seguidas Necesarias</string>
    <string name="mejor_puntaje">Mejor Puntaje</string>
    <string name="default_0">0</string>
    <string name="reiniciar_datos">Reiniciar Datos</string>
    <string name="creador">Creador</string>
    <string name="matias_alvarado">Matias Alvarado</string>
    <string name="description">Descripción</string>
    <string name="game_description">Bop-it! es un juego de reflejos y atención. Requieres de hacer ciertas acciones para ganar puntos. Solo tienes una oportunidad para cada acción.</string>
    <string name="version">Version</string>
    <string name="version_value">1.0.0</string>
    <string name="instrucciones">Instrucciones</string>
    <string name="puntaje">Puntaje</string>
    <string name="highscore">Mejor Puntaje</string>
    <string name="tiempo_restante">Tiempo Restante</string>
    <string name="fin_del_juego">¡Fin del Juego!</string>
    <string name="fling">¡Deslizar!</string>
    <string name="shake">¡Sacudir!</string>
    <string name="tap">¡Tocar!</string>
    <string name="complete">¡Completado!</string>
    <string name="time_left">Tiempo: %1$s</string>
    <string name="best_score">Mejor Puntaje: %1$s</string>
    <string name="score_value">Puntaje: %1$s</string>
    <string name="final_score">Tu puntaje es: %1$s</string>
    <string name="new_highscore">¡Nuevo Mejor Puntaje: %1$s!</string>
    <string name="bonus_score">Puntaje +1</string>
    <string name="tasks_left_string">Acciones Restantes: %1$s</string>
</resources>