<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gameBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/firstText"
        android:layout_width="294dp"
        android:layout_height="87dp"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/instrucciones"
        android:textSize="35sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <TextView
        android:id="@+id/secondText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="115dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="276dp"
        android:gravity="center"
        android:text="@string/tiempo_restante"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <TextView
        android:id="@+id/highScoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highscore"
        android:textSize="16sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:padding="16dp" />

    <TextView
        android:id="@+id/currentScoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/puntaje"
        android:textSize="16sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:padding="16dp" />

</RelativeLayout>